# sysrepo-plugin-raspberry

./: .gitignore  CMakeLists.txt  README.md  raspberry-demo.c
src/: raspberry-demo.c
yang/: sysrepo-raspberry-demo.yang
